--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 PROJECT (librepo C)
-CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
+CMAKE_MINIMUM_REQUIRED (VERSION 2.8.5)
 
 OPTION (ENABLE_TESTS "Build test?" ON)
 OPTION (ENABLE_DOCS "Build docs?" ON)
@@ -28,6 +28,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 FIND_PACKAGE(PkgConfig)
 PKG_CHECK_MODULES(GLIB2 glib-2.0 REQUIRED)
+PKG_SEARCH_MODULE(LIBCRYPTO REQUIRED libcrypto openssl)
 FIND_PACKAGE(EXPAT REQUIRED)
 FIND_PACKAGE(CURL REQUIRED)
 FIND_PACKAGE(Gpgme REQUIRED)
@@ -56,14 +57,7 @@ INCLUDE_DIRECTORIES(${EXPAT_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 #INCLUDE_DIRECTORIES(${CHECK_INCLUDE_DIR})
 
-IF (NOT LIB_INSTALL_DIR)
-  SET (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/usr/lib")
-ENDIF (NOT LIB_INSTALL_DIR)
-
-IF (NOT INCLUDE_INSTALL_DIR)
-  SET (INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/usr/include")
-ENDIF (NOT INCLUDE_INSTALL_DIR)
-
+include (GNUInstallDirs)
 # Python stuff
 
 if (NOT PYTHON_DESIRED)
